--- a/kadai_013/index.html
+++ b/kadai_013/index.html
@@ -19,6 +19,19 @@
         <a href="index.html#product">PRODUCT</a>
         <a href="index.html#contact">CONTACT</a>
       </nav>
+      <!--スマホ用ボタン-->
+      <button id="menu-sp" onclick="document.getElementById('nav-sp').style.display='block'">
+        <img src="images/button-menu.png" alt="ナビゲーションを開く">
+      </button>
+      
+      <!--スマホ用ナビゲーション-->
+      <nav id="nav-sp" onclick="document.getElementById('nav-sp').style.display='none'">
+        <img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる">
+        <a id="logo-sp" href="index.html"><img src="images/logo-sp.png" alt="トップページに戻る"></a>
+        <a class="menu" href="index.html#concept">CONCEPT</a>
+        <a class="menu" href="index.html#product">PRODUCT</a>
+        <a class="menu" href="index.html#contact">CONTACT</a>
+      </nav>
     </header>
 
     <main>
